--- a/src/my-settings.json
+++ b/src/my-settings.json
@@ -1,1 +1,1 @@
-{"games": [], "additional_settings": {"swap": false, "verbose": false, "timeout": false, "autorestart": false, "pause": true, "pauseIllegal": false, "timeout_limit": "-1", "layout_chosen": "Random Override"}, "pause_conditions": []}
+{"games": [], "additional_settings": {"swap": true, "verbose": false, "timeout": false, "autorestart": false, "pause": true, "pauseIllegal": false, "timeout_limit": "-1", "layout_chosen": "Random Override"}, "pause_conditions": []}
